# short-experiments

./: main.py  pyproject.toml
torch_profiler/: compiled_tensor_ops.py  ocr_profiling.py  simple_tensor_ops.py
