[project]
name = "short-experiments"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
